--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -2,16 +2,16 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title Student Database
+    title ~~~+++TSK-MSTR+++~~~
     link(rel='stylesheet' href='/css/style.css')
   body
-    h1 Student Database
+    h1 ~~~+++TSK-MSTR+++~~~
     nav
       ul
         li: a(href='/') Home
         li: a(href='/about') About
         li: a(href='/faq') FAQ
-        li: a(href='/students') Student List
-        li: a(href='/students/new') Add Student
+        li: a(href='/priorities') Priorities List
+        li: a(href='/priorities/new') Add Priority
 
     block content
