--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -13,5 +13,7 @@ html
         li: a(href='/faq') FAQ
         li: a(href='/priorities') Priorities List
         li: a(href='/priorities/new') Add Priority
+        li: a(href='/tasks') Tasks List
+        li: a(href='/tasks/new') Add Tasks
 
     block content
