--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,7 +9,7 @@ nav ul , #pages ul {
 } 
 
 nav li,#pages li {
-  display:inline-block;
+  display: inline-block;
   margin: 2px 4px;
 }
 
@@ -49,7 +49,7 @@ body{
   position: absolute;
 }
 
-h2 {
+#pages {
   display: inline;
   margin: 0 auto;
   text-align: center;
